--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
       />
     </header>
 
-    <main class="content"></main>
+    <main class="content">
+      <!-- profile block -->
+      <section class="profile">
+        <img
+          class="profile__image"
+          src="./images/jacques-cousteau.jpg"
+          alt="Jacques Cousteau Profile Image"
+        />
+        <div class="profile__info">
+          <div class="profile__person">
+            <h1 class="profile__name">Jacques Cousteau</h1>
+            <button class="profile__edit-button" type="button"></button>
+          </div>
+          <p class="profile__description">Explorer</p>
+        </div>
+        <button class="profile__add-button" type="button"></button>
+      </section>
+    </main>
   </body>
 </html>
