feat:postcards-postcard

--- a/index.html
+++ b/index.html
@@ -40,6 +40,107 @@
         </div>
         <button class="profile__add-button" type="button"></button>
       </section>
+
+      <!-- postcards block-->
+      <section class="postcards">
+        <ul class="postcards__list">
+          <li class="postcard">
+            <img
+              src="./images/card1.jpg"
+              alt="Yosemite Valley View, USA"
+              class="postcard__image"
+            />
+            <div class="postcard__title-area">
+              <h2 class="postcard__title">Yosemite Valley</h2>
+              <button
+                class="postcard__like-button"
+                type="button"
+                aria-label="like-or-unlike-postcard"
+              ></button>
+            </div>
+          </li>
+
+          <li class="postcard">
+            <img
+              src="./images/card2.jpg"
+              alt="The Magnificent Lake Louise, Canada"
+              class="postcard__image"
+            />
+            <div class="postcard__title-area">
+              <h2 class="postcard__title">Lake Louise</h2>
+              <button
+                class="postcard__like-button"
+                type="button"
+                aria-label="like-or-unlike-postcard"
+              ></button>
+            </div>
+          </li>
+
+          <li class="postcard">
+            <img
+              src="./images/card3.jpg"
+              alt="Sunset Over The Beautiful Bald Mountains, North Carolina, USA"
+              class="postcard__image"
+            />
+            <div class="postcard__title-area">
+              <h2 class="postcard__title">Bald Mountains</h2>
+              <button
+                class="postcard__like-button"
+                type="button"
+                aria-label="like-or-unlike-postcard"
+              ></button>
+            </div>
+          </li>
+
+          <li class="postcard">
+            <img
+              src="./images/card4.jpg"
+              alt="Mesmerizing Latemar, Italy"
+              class="postcard__image"
+            />
+            <div class="postcard__title-area">
+              <h2 class="postcard__title">Latemar</h2>
+              <button
+                class="postcard__like-button"
+                type="button"
+                aria-label="like-or-unlike-postcard"
+              ></button>
+            </div>
+          </li>
+
+          <li class="postcard">
+            <img
+              src="./images/card5.jpg"
+              alt="Vanoise National Park, France"
+              class="postcard__image"
+            />
+            <div class="postcard__title-area">
+              <h2 class="postcard__title">Vanoise National Park</h2>
+              <button
+                class="postcard__like-button"
+                type="button"
+                aria-label="like-or-unlike-postcard"
+              ></button>
+            </div>
+          </li>
+
+          <li class="postcard">
+            <img
+              src="./images/card6.jpg"
+              alt="The Incredible Lago di Braies, South Tyrol, Italy"
+              class="postcard__image"
+            />
+            <div class="postcard__title-area">
+              <h2 class="postcard__title">Lago di Braies</h2>
+              <button
+                class="postcard__like-button"
+                type="button"
+                aria-label="like-or-unlike-postcard"
+              ></button>
+            </div>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
