--- a/index.html
+++ b/index.html
@@ -142,5 +142,10 @@
         </ul>
       </section>
     </main>
+
+    <!-- footer block-->
+    <footer class="footer section">
+      <p class="footer__copyrights">&copy; 2022 Around The U.S</p>
+    </footer>
   </body>
 </html>
