--- a/index.html
+++ b/index.html
@@ -34,11 +34,19 @@
         <div class="profile__info">
           <div class="profile__person">
             <h1 class="profile__name">Jacques Cousteau</h1>
-            <button class="profile__edit-button" type="button"></button>
+            <button
+              class="profile__edit-button"
+              type="button"
+              aria-label="open-edit-profile-modal"
+            ></button>
           </div>
           <p class="profile__description">Explorer</p>
         </div>
-        <button class="profile__add-button" type="button"></button>
+        <button
+          class="profile__add-button"
+          type="button"
+          aria-label="open-new-card-modal"
+        ></button>
       </section>
 
       <!-- postcards block-->
