--- a/index.html
+++ b/index.html
@@ -155,5 +155,40 @@
     <footer class="footer section">
       <p class="footer__copyrights">&copy; 2022 Around The U.S</p>
     </footer>
+
+    <!-- popup block-->
+    <div class="popup">
+      <div class="popup__overlay">
+        <button
+          class="popup__close-button"
+          type="button"
+          aria-label="close-delete-modal"
+        ></button>
+        <h2 class="popup__title">Edit Profile</h2>
+        <form action="submit" class="form popup__form">
+          <fieldset class="form__fieldset">
+            <input
+              class="form__input"
+              type="text"
+              name="name"
+              placeholder="Name"
+              required
+            />
+
+            <input
+              class="form__input"
+              type="text"
+              name="title"
+              placeholder="About Me"
+              required
+            />
+          </fieldset>
+
+          <fieldset class="form__fieldset">
+            <button class="form__button" type="submit">Save</button>
+          </fieldset>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
