feat:footer update

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </main>
 
     <!-- footer block-->
-    <footer class="footer section">
+    <footer class="footer">
       <p class="footer__copyrights">&copy; 2022 Around The U.S</p>
     </footer>
 
