--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <title>Around The U.S</title>
     <link rel="stylesheet" href="pages/index.css" />
+    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
   </head>
   <body class="page">
     <!-- header block -->
