--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
           aria-label="close-delete-modal"
         ></button>
         <h2 class="popup__title">Edit Profile</h2>
-        <form action="submit" class="form popup__form">
+        <form action="submit" class="form popup__form" name="registration">
           <fieldset class="form__fieldset">
             <input
               class="form__input"
