--- a/index.html
+++ b/index.html
@@ -52,296 +52,7 @@
 
       <!-- postcards block-->
       <section class="postcards">
-        <ul class="postcards__list">
-          <li class="postcard">
-            <img
-              src="./images/card1.jpg"
-              alt="Yosemite Valley View, USA"
-              class="postcard__image"
-            />
-            <div class="postcard__title-area">
-              <h2 class="postcard__title">Yosemite Valley</h2>
-              <button
-                class="postcard__like-button"
-                type="button"
-                aria-label="like-or-unlike-postcard"
-              ></button>
-            </div>
-          </li>
-
-          <li class="postcard">
-            <img
-              src="./images/card2.jpg"
-              alt="The Magnificent Lake Louise, Canada"
-              class="postcard__image"
-            />
-            <div class="postcard__title-area">
-              <h2 class="postcard__title">Lake Louise</h2>
-              <button
-                class="postcard__like-button"
-                type="button"
-                aria-label="like-or-unlike-postcard"
-              ></button>
-            </div>
-          </li>
-
-          <li class="postcard">
-            <img
-              src="./images/card3.jpg"
-              alt="Sunset Over The Beautiful Bald Mountains, North Carolina, USA"
-              class="postcard__image"
-            />
-            <div class="postcard__title-area">
-              <h2 class="postcard__title">Bald Mountains</h2>
-              <button
-                class="postcard__like-button"
-                type="button"
-                aria-label="like-or-unlike-postcard"
-              ></button>
-            </div>
-          </li>
-
-          <li class="postcard">
-            <img
-              src="./images/card4.jpg"
-              alt="Mesmerizing Latemar, Italy"
-              class="postcard__image"
-            />
-            <div class="postcard__title-area">
-              <h2 class="postcard__title">Latemar</h2>
-              <button
-                class="postcard__like-button"
-                type="button"
-                aria-label="like-or-unlike-postcard"
-              ></button>
-            </div>
-          </li>
-
-          <li class="postcard">
-            <img
-              src="./images/card5.jpg"
-              alt="Vanoise National Park, France"
-              class="postcard__image"
-            />
-            <div class="postcard__title-area">
-              <h2 class="postcard__title">Vanoise National Park</h2>
-              <button
-                class="postcard__like-button"
-                type="button"
-                aria-label="like-or-unlike-postcard"
-              ></button>
-            </div>
-          </li>
-
-          <li class="postcard">
-            <img
-              src="./images/card6.jpg"
-              alt="The Incredible Lago di Braies, South Tyrol, Italy"
-              class="postcard__image"
-            />
-            <div class="postcard__title-area">
-              <h2 class="postcard__title">Lago di Braies</h2>
-              <button
-                class="postcard__like-button"
-                type="button"
-                aria-label="like-or-unlike-postcard"
-              ></button>
-            </div>
-          </li>
-
-          <!-- Additional postcards-->
-          <li class="postcard">
-            <img
-              src="./images/card7.jpg"
-              alt="Beautiful Lake Tahoe, USA"
-              class="postcard__image"
-            />
-            <div class="postcard__title-area">
-              <h2 class="postcard__title">Lake Tahoe</h2>
-              <button
-                class="postcard__like-button"
-                type="button"
-                aria-label="like-or-unlike-postcard"
-              ></button>
-            </div>
-          </li>
-
-          <li class="postcard">
-            <img
-              src="./images/card8.jpg"
-              alt="The gorgeous Burney Falls, USA"
-              class="postcard__image"
-            />
-            <div class="postcard__title-area">
-              <h2 class="postcard__title">Burney Falls</h2>
-              <button
-                class="postcard__like-button"
-                type="button"
-                aria-label="like-or-unlike-postcard"
-              ></button>
-            </div>
-          </li>
-
-          <li class="postcard">
-            <img
-              src="./images/card9.jpg"
-              alt="Magnificent Big Sur, California, USA"
-              class="postcard__image"
-            />
-            <div class="postcard__title-area">
-              <h2 class="postcard__title">Big Sur</h2>
-              <button
-                class="postcard__like-button"
-                type="button"
-                aria-label="like-or-unlike-postcard"
-              ></button>
-            </div>
-          </li>
-
-          <li class="postcard">
-            <img
-              src="./images/card10.jpg"
-              alt="Niveous Alaska, USA"
-              class="postcard__image"
-            />
-            <div class="postcard__title-area">
-              <h2 class="postcard__title">Alaska</h2>
-              <button
-                class="postcard__like-button"
-                type="button"
-                aria-label="like-or-unlike-postcard"
-              ></button>
-            </div>
-          </li>
-
-          <li class="postcard">
-            <img
-              src="./images/card11.jpg"
-              alt="The Amazing Oahu, Hawaii, USA"
-              class="postcard__image"
-            />
-            <div class="postcard__title-area">
-              <h2 class="postcard__title">Oahu</h2>
-              <button
-                class="postcard__like-button"
-                type="button"
-                aria-label="like-or-unlike-postcard"
-              ></button>
-            </div>
-          </li>
-
-          <li class="postcard">
-            <img
-              src="./images/card12.jpg"
-              alt="The mesmerizing Mt Tamalpais over the clouds, Marin County, California, USA"
-              class="postcard__image"
-            />
-            <div class="postcard__title-area">
-              <h2 class="postcard__title">Mt Tamalpais</h2>
-              <button
-                class="postcard__like-button"
-                type="button"
-                aria-label="like-or-unlike-postcard"
-              ></button>
-            </div>
-          </li>
-
-          <li class="postcard">
-            <img
-              src="./images/card13.jpg"
-              alt="The glorious Kauai, Hawaii, USA"
-              class="postcard__image"
-            />
-            <div class="postcard__title-area">
-              <h2 class="postcard__title">Kauai</h2>
-              <button
-                class="postcard__like-button"
-                type="button"
-                aria-label="like-or-unlike-postcard"
-              ></button>
-            </div>
-          </li>
-
-          <li class="postcard">
-            <img
-              src="./images/card14.jpg"
-              alt="Beautiful Golden Gate Bridge, San Francisco, USA"
-              class="postcard__image"
-            />
-            <div class="postcard__title-area">
-              <h2 class="postcard__title">Golden Gate Bridge</h2>
-              <button
-                class="postcard__like-button"
-                type="button"
-                aria-label="like-or-unlike-postcard"
-              ></button>
-            </div>
-          </li>
-
-          <li class="postcard">
-            <img
-              src="./images/card15.jpg"
-              alt="Incredible view of Blue Ridge Mountains, North Carolina, USA"
-              class="postcard__image"
-            />
-            <div class="postcard__title-area">
-              <h2 class="postcard__title">Blue Ridge Mountains</h2>
-              <button
-                class="postcard__like-button"
-                type="button"
-                aria-label="like-or-unlike-postcard"
-              ></button>
-            </div>
-          </li>
-
-          <li class="postcard">
-            <img
-              src="./images/card16.jpg"
-              alt="The fabulous Great Sand Dunes, Colorado, USA"
-              class="postcard__image"
-            />
-            <div class="postcard__title-area">
-              <h2 class="postcard__title">Great Sand Dunes</h2>
-              <button
-                class="postcard__like-button"
-                type="button"
-                aria-label="like-or-unlike-postcard"
-              ></button>
-            </div>
-          </li>
-
-          <li class="postcard">
-            <img
-              src="./images/card17.jpg"
-              alt="Lovely colorful view of Mount Rainier, Washington, USA"
-              class="postcard__image"
-            />
-            <div class="postcard__title-area">
-              <h2 class="postcard__title">Mount Rainier</h2>
-              <button
-                class="postcard__like-button"
-                type="button"
-                aria-label="like-or-unlike-postcard"
-              ></button>
-            </div>
-          </li>
-
-          <li class="postcard">
-            <img
-              src="./images/card18.jpg"
-              alt="The incredible Brooklyn Bridge, NY, USA"
-              class="postcard__image"
-            />
-            <div class="postcard__title-area">
-              <h2 class="postcard__title">Brooklyn Bridge</h2>
-              <button
-                class="postcard__like-button"
-                type="button"
-                aria-label="like-or-unlike-postcard"
-              ></button>
-            </div>
-          </li>
-        </ul>
+        <ul class="postcards__list"></ul>
       </section>
     </main>
 
@@ -384,6 +95,26 @@
         </form>
       </div>
     </div>
+
+    <!-- postcard template -->
+    <template id="postcard-template">
+      <li class="postcard">
+        <button
+          class="postcard__remove-button"
+          aria-label="remove postcard"
+          type="button"
+        ></button>
+        <img class="postcard__image" src="#" alt="#" />
+        <div class="postcard__title-area">
+          <h2 class="postcard__title"></h2>
+          <button
+            class="postcard__like-button"
+            aria-label="like-or-unlike-postcard"
+            type="button"
+          ></button>
+        </div>
+      </li>
+    </template>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
