--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
   </head>
   <body class="page">
-    <!-- header block -->
+    <!--header block-->
     <header class="header">
       <img
         class="header__logo"
@@ -25,7 +25,7 @@
     </header>
 
     <main class="content">
-      <!-- profile block -->
+      <!--profile block-->
       <section class="profile">
         <img
           class="profile__image"
@@ -50,30 +50,34 @@
         ></button>
       </section>
 
-      <!-- postcards block-->
+      <!--postcards block-->
       <section class="postcards">
         <ul class="postcards__list"></ul>
       </section>
     </main>
 
-    <!-- footer block-->
+    <!--footer block-->
     <footer class="footer">
       <p class="footer__copyrights">&copy; 2022 Around The U.S</p>
     </footer>
 
-    <!-- popup block-->
-    <div class="popup">
+    <!--popup edit profile block-->
+    <div class="popup popup_type_edit-profile">
       <div class="popup__overlay">
         <button
-          class="popup__close-button"
+          class="popup__close-button popup__close-button_type_profile"
           type="button"
           aria-label="close-delete-modal"
         ></button>
         <h2 class="popup__title">Edit Profile</h2>
-        <form action="submit" class="form popup__form" name="registration">
+        <form
+          action="submit"
+          class="form popup__form popup__form_type_profile"
+          name="registration"
+        >
           <fieldset class="form__fieldset">
             <input
-              class="form__input"
+              class="form__input form__input_type_profile-name"
               type="text"
               name="name"
               placeholder="Name"
@@ -81,7 +85,7 @@
             />
 
             <input
-              class="form__input"
+              class="form__input form__input_type_profile-title"
               type="text"
               name="title"
               placeholder="About Me"
@@ -96,7 +100,63 @@
       </div>
     </div>
 
-    <!-- postcard template -->
+    <!--popup add postcard block-->
+    <div class="popup popup_type_add-postcard">
+      <div class="popup__overlay">
+        <button
+          class="popup__close-button popup__close-button_type_postcard"
+          type="button"
+          aria-label="close-delete-modal"
+        ></button>
+        <h2 class="popup__title">New Place</h2>
+        <form
+          action="submit"
+          class="form popup__form popup__form_type_add-postcard"
+          name="registration"
+        >
+          <fieldset class="form__fieldset">
+            <input
+              class="form__input form__input_type_postcard-name"
+              type="text"
+              name="postcard-title"
+              placeholder="Title"
+              required
+            />
+
+            <input
+              class="form__input form__input_type_postcard-url"
+              type="url"
+              name="postcard-link"
+              placeholder="Image Link"
+              required
+            />
+          </fieldset>
+
+          <fieldset class="form__fieldset">
+            <button
+              class="form__button form__button_type_postcard"
+              type="submit"
+            >
+              Create
+            </button>
+          </fieldset>
+        </form>
+      </div>
+    </div>
+
+    <!--popup image exhibit block-->
+    <div class="popup popup_type_image-ex">
+      <div class="popup__overlay popup__overlay_type_image-exhibit">
+        <button
+          class="popup__close-button popup__close-button_type_image_ex"
+          type="button"
+        ></button>
+        <img class="popup__image" src="#" alt="#" />
+        <p class="popup__caption"></p>
+      </div>
+    </div>
+
+    <!--postcard template-->
     <template id="postcard-template">
       <li class="postcard">
         <button
