--- a/index.html
+++ b/index.html
@@ -73,24 +73,35 @@
         <form
           action="submit"
           class="form popup__form popup__form_type_profile"
-          name="registration"
+          name="profileForm"
+          novalidate
         >
           <fieldset class="form__fieldset">
             <input
               class="form__input form__input_type_profile-name"
               type="text"
               name="name"
+              id="input-name"
               placeholder="Name"
+              minlength="2"
+              maxlength="40"
               required
             />
+
+            <span class="form__input-error input-name-error"></span>
 
             <input
               class="form__input form__input_type_profile-title"
               type="text"
-              name="title"
+              name="about"
               placeholder="About Me"
+              id="input-about"
+              minlength="2"
+              maxlength="200"
               required
             />
+
+            <span class="form__input-error input-about-error"></span>
           </fieldset>
 
           <fieldset class="form__fieldset">
@@ -112,24 +123,33 @@
         <form
           action="submit"
           class="form popup__form popup__form_type_add-postcard"
-          name="registration"
+          name="addForm"
+          novalidate
         >
           <fieldset class="form__fieldset">
             <input
               class="form__input form__input_type_postcard-name"
               type="text"
-              name="postcard-title"
+              name="input-title"
+              id="input-title"
               placeholder="Title"
+              minlength="1"
+              maxlength="30"
               required
             />
+
+            <span class="form__input-error input-title-error"></span>
 
             <input
               class="form__input form__input_type_postcard-url"
               type="url"
-              name="postcard-link"
+              name="input-url"
+              id="input-url"
               placeholder="Image Link"
               required
             />
+
+            <span class="form__input-error input-url-error"></span>
           </fieldset>
 
           <fieldset class="form__fieldset">
@@ -175,6 +195,7 @@
         </div>
       </li>
     </template>
-    <script src="./scripts/index.js"></script>
+    <!-- <script src="./scripts/validate.js"></script> -->
+    <script src="./scripts/index.js" type="module"></script>
   </body>
 </html>
