--- a/src/index.html
+++ b/src/index.html
@@ -258,12 +258,14 @@
         <img class="postcard__image" src="#" alt="#" />
         <div class="postcard__title-area">
           <h2 class="postcard__title"></h2>
-          <button
-            class="postcard__like-button"
-            aria-label="like-or-unlike-postcard"
-            type="button"
-          ></button>
-          <!-- <span class="postcard__like-counter">0</span> -->
+          <div class="postcard__like-container">
+            <button
+              class="postcard__like-button"
+              aria-label="like-or-unlike-postcard"
+              type="button"
+            ></button>
+            <span class="postcard__like-counter">0</span>
+          </div>
         </div>
       </li>
     </template>
