--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,9 @@
           src="<%=require('./images/jacques-cousteau.jpg')%>"
           alt="Jacques Cousteau Profile Image"
         /> -->
-        <img class="profile__image" src="#" alt="User's Profile Photo" />
+        <div class="profile__image-overlay">
+          <img class="profile__image" src="#" alt="User's Profile Photo" />
+        </div>
         <div class="profile__info">
           <div class="profile__person">
             <!-- <h1 class="profile__name">Jacques Cousteau</h1> -->
@@ -185,7 +187,7 @@
     </div>
 
     <!-- popup avatar update -->
-    <!-- <section class="popup popup_type_avatar-update">
+    <section class="popup popup_type_avatar-update">
       <div class="popup__overlay">
         <button
           class="popup__close-button popup__close-button_type_avatar"
@@ -199,26 +201,26 @@
           name="avatarForm"
           novalidate
         >
-        <fieldset class="form__fieldset">
-          <input
-            class="form__input form__input_type_avatar-url"
-            type="url"
-            name="link"
-            id="input-avatar"
-            placeholder="User Image Url"
-            required
-          />
-          <span class="form__input-error input-avatar-error"></span>
-        </fieldset>
+          <fieldset class="form__fieldset">
+            <input
+              class="form__input form__input_type_avatar-url"
+              type="url"
+              name="link"
+              id="input-avatar"
+              placeholder="User Image Url"
+              required
+            />
+            <span class="form__input-error input-avatar-error"></span>
+          </fieldset>
 
-        <fieldset class="form__fieldset">
-          <button class="form__button form__button_type_avatar" type="submit">
-            Save
-          </button>
-        </fieldset>
+          <fieldset class="form__fieldset">
+            <button class="form__button form__button_type_avatar" type="submit">
+              Save
+            </button>
+          </fieldset>
         </form>
       </div>
-    </section> -->
+    </section>
 
     <!-- popup remove postcard -->
     <section class="popup popup_type_remove-postcard">
